# BlueBuzzah-Updater

./: .env.example  .gitignore  .snyk  CLAUDE.md  DESIGN_GUIDE.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
docs/: DESIGN_GUIDE.md  DFU_MODULE_IMPLEMENTATION.md  TAURI_DFU_FLASH_GUIDE.MD
docs/superpowers/plans/: 2026-06-18-windows-reenum-roleconfig-resilience.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: cache.rs  main.rs  settings.rs
src-tauri/src/commands/: device.rs  dfu.rs  firmware.rs  mod.rs  settings.rs
src-tauri/src/dfu/: config.rs  device.rs  error.rs  firmware_reader.rs  mod.rs  packet.rs  protocol.rs  slip.rs  transport.rs
src-tauri/src/test_helpers/: fixtures.rs  mod.rs  temp.rs
src-tauri/src/traits/: command.rs  mod.rs
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/home/: HomeScreen.tsx
src/components/layout/: TherapyWizardLayout.tsx  WizardLayout.test.tsx  WizardLayout.tsx
src/components/therapy/: ProfileSelection.tsx  TherapyDeviceSelection.tsx  TherapyProgress.tsx  TherapySuccess.tsx  index.ts
src/components/ui/: card.tsx  select.tsx
src/components/updater/: UpdateDialog.tsx
src/components/wizard/: DeviceSelection.test.tsx  DeviceSelection.tsx  FirmwareSelection.test.tsx  FirmwareSelection.tsx  InstallationProgress.test.tsx  InstallationProgress.tsx  SuccessScreen.test.tsx  SuccessScreen.tsx
src/hooks/: useAppUpdater.ts  useCopyToClipboard.test.ts  useCopyToClipboard.ts
src/lib/: config-templates.test.ts  config-templates.ts  error-messages.test.ts  error-messages.ts  therapy-profiles.ts  throttle.ts  updater-errors.ts  utils.test.ts  utils.ts
src/services/: DeviceService.test.ts  DeviceService.ts  FirmwareService.test.ts  FirmwareService.ts  TherapyService.ts  UpdaterService.ts
src/stores/: settingsStore.test.ts  settingsStore.ts  therapyStore.ts  updaterStore.ts  wizardStore.test.ts  wizardStore.ts
src/test/: factories.ts  setup.ts
src/types/: index.ts
