[package]
name = "bluebuzzah-updater"
version = "1.0.0"
description = "BlueBuzzah Firmware Updater"
authors = ["BlueBuzzah"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
sha2 = "0.10"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[dev-dependencies]
tempfile = "3"
mockall = "0.12"

# CI-optimized release profile for faster builds
[profile.release]
codegen-units = 16      # Parallel compilation (faster build)
lto = "thin"            # Fast LTO (good balance between speed and optimization)
incremental = true      # Helps with cached CI builds
opt-level = "s"         # Size optimization (faster to compile than opt-level=3)
strip = "symbols"       # Smaller binary, faster linking
panic = "abort"         # Smaller binary, no unwinding overhead
